# grokkingAlgorithms

./: README.md
c/algorithms/: CMakeLists.txt  DataStructures.c  DataStructures.h
c/algorithms/.devcontainer/: devcontainer.json
c/algorithms/.github/: dependabot.yml
c/algorithms/Arrays/: Arrays.h
c/algorithms/Extra_Problems/: ExtraProblems.h  StackProblems.h
c/algorithms/LinkedList/: CircularLinkedList.h  DoublyLinkedList.h  Memory_Efficient_DLL.h  SinglyLinkedList.h
c/algorithms/Searching/: Searching.h
c/algorithms/Stack/: ArrayStack.h  DynamicArrayStack.h  LinkedListBasedStack.h
